exports[`test Child node 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>Child
</div></a>
"
`;

exports[`test Key down (after having focus) results in click 1`] = `
"<div>
  onclick called: 0
</div><a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Button
  </div>
</div></a>
"
`;

exports[`test No options 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\"></a>
"
`;

exports[`test Option: after 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Button
  </div>
</div><span>After</span></a>
"
`;

exports[`test Option: before 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--text\"><span>Before</span>
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Button
  </div>
</div></a>
"
`;

exports[`test Option: class 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text class-x\"></a>
"
`;

exports[`test Option: content 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div>
    Content
  </div>
</div></a>
"
`;

exports[`test Option: disabled (false) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Not disabled
  </div>
</div></a>
"
`;

exports[`test Option: disabled (true) 1`] = `
"<a tabindex=\"-1\" disabled class=
\"pe-button pe-button--text pe-button--disabled\">
<div class=\"pe-button__content\">
  <div class=\"pe-button__label\">
    Disabled
  </div>
</div></a>
"
`;

exports[`test Option: element (button) 1`] = `
"<button tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    button element
  </div>
</div></button>
"
`;

exports[`test Option: events (onclick) 1`] = `
"<div>
  onclick called: 0
</div><a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Button
  </div>
</div></a>
"
`;

exports[`test Option: formaction 1`] = `
"<a formaction=\"http://polythene.js.org\" tabindex=\"0\" class=
\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Form action
  </div>
</div></a>
"
`;

exports[`test Option: id 1`] = `
"<a id=\"id-x\" tabindex=\"0\" class=\"pe-button pe-button--text\"></a>
"
`;

exports[`test Option: inactivate (2) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Inactivated for 2s
  </div>
</div></a>
"
`;

exports[`test Option: inactive (false) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Not inactive
  </div>
</div></a>
"
`;

exports[`test Option: inactive (true) 1`] = `
"<a tabindex=\"-1\" class=
\"pe-button pe-button--text pe-button--inactive\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Inactive
  </div>
</div></a>
"
`;

exports[`test Option: ink (false) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    No ink
  </div>
</div></a>
"
`;

exports[`test Option: label -- dark theme 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Label
  </div>
</div></a>
"
`;

exports[`test Option: label 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Label
  </div>
</div></a>
"
`;

exports[`test Option: selected 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--text pe-button--selected\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Selected
  </div>
</div></a>
"
`;

exports[`test Option: url (with oncreate) 1`] = `
"<a tabindex=\"0\" href=\"#!/shadow\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Go to /#/shadow
  </div>
</div></a>
"
`;

exports[`test Option: url (without oncreate) 1`] = `
"<a tabindex=\"0\" href=\"/shadow\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Go to /shadow
  </div>
</div></a>
"
`;

exports[`test Option: wash (false) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    No wash
  </div>
</div></a>
"
`;

exports[`test Themed button (theme file) -- dark theme 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--text my-button--primary\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Dark theme primary button
  </div>
</div></a>
"
`;

exports[`test Themed button (theme file) 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--text my-button--primary\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Theme primary button
  </div>
</div></a>
"
`;

exports[`test Themed button -- dark theme 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--text tests-button-themed-button\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Themed button
  </div>
</div></a>
"
`;

exports[`test Themed button 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--text tests-button-themed-button\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Themed button
  </div>
</div></a>
"
`;

exports[`test Themed button: (option: borders) -- dark theme 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--text pe-button--borders tests-button-bordered-button\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Borders dark theme
  </div>
</div></a>
"
`;

exports[`test Themed button: (option: borders) 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--text pe-button--borders tests-button-bordered-button\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Borders
  </div>
</div></a>
"
`;

exports[`test onbeforeupdate 1`] = `
"<div>
  Updated: 0
</div><a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Button
  </div>
</div></a>
"
`;
